# profile.ivi.weston-ivi-shell

./: .gitignore  Makefile.am  configure.ac  project.config
clients/: Makefile.am  ivi-shell-user-interface.c  multi-resource.c  terminal.c  window.c  wscreensaver-glue.c
data/: Makefile.am
desktop-shell/: input-panel.c  shell.c
fullscreen-shell/: fullscreen-shell.c
ivi-shell/: Makefile.am  ivi-layout-export.h  ivi-layout-private.h  ivi-layout-transition.c  ivi-layout.c  ivi-layout.h  ivi-shell-ext.c  ivi-shell.c  ivi-shell.h  weston-layout.c  weston.ini.in
packaging/: weston-ivi-shell.changes  weston-ivi-shell.manifest  weston-ivi-shell.spec  weston.ini
protocol/: ivi-application.xml  xdg-shell.xml
shared/: config-parser.c  option-parser.c  str-util.c  str-util.h
src/: compositor-drm.c  compositor-rdp.c  compositor-wayland.c  compositor-x11.c  compositor.c  compositor.h  gl-renderer.c  input.c  launcher-util.c  libbacklight.c  libinput-seat.c  libinput-seat.h  udev-seat.c  udev-seat.h
tests/: strutil-test.c
xwayland/: launcher.c
